# stem-failure-screening-mcp

./: .env.cloud.example  .gitattributes  .gitignore  LICENSE  README.md  environment-mcp.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cloud_config.py  cloud_sync.py  main.py  mcp_client.py
app/static/: index.html
configs/: agent_system_prompt.txt  default.yaml
core/: __init__.py  batch_processor.py  cli.py  config.py  device.py  grid_search.py  image_utils.py  preprocessing.py  strain_analysis.py  sublattice_analysis.py
data/: 1.tif  2.tif
mcp_app/: __init__.py  ml_server.py  models.py  mounts.py  peak_server.py  project_server.py  reporting.py  strain_server.py  utils.py
ml/: __init__.py  defect_detection.py  feature_engineering.py  tracking.py
scripts/: refresh_assessment_wording.py  sync_run_to_cloud.py
